Added a new workflow to make things easier for using vs code

--- a/index.html
+++ b/index.html
@@ -23,4 +23,5 @@ cmd + r (refresh page)
 cmd + tab (switch back to code text editor)
 cmd + b (hide side bar)
 ctrl + `(opens the terminal by using control and then the backtick)
+cmd + n (adds new file and then save so that you can then write the name like home.js)
 -->
